// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserDropdown.vue should render dropdown closed 1`] = `
<div class="navbar-dropdown is-open">
  <ul class="navbar-dropdown-container">
    <li class="navbar-dropdown-new-platform u-flex u-flex__align--center u-flex__justify--between u-mb--24">
      <div class="navbar-dropdown-userInfo">
        <p class="text is-semibold is-txtPrimary">UserDropdown.carto3.title</p>
        <p class="text is-small u-mt--4">UserDropdown.carto3.message</p>
      </div>
      <div><a href="https://app.carto.com" target="_blank"><img src="../../assets/icons/common/open-in-new.svg"></a></div>
    </li>
    <li class="navbar-dropdown-profile">
      <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
      <div class="navbar-dropdown-userInfo">
        <p class="text is-semibold is-caption">Test user</p>
        <p class="text is-small">user@test.com</p>
      </div>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
    </li>
    <!---->
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
      <router-link to="[object Object]" staticroute="/dashboard/notifications" class="text is-semibold is-caption is-txtGrey">
        UserDropdown.notifications
      </router-link>
      <!---->
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/feedback.svg"></div> <a href="https://docs.google.com/forms/d/e/1FAIpQLScBQUWd-TP3Qy514DOCNg-KoLrViHijUR5giLAMS-3jmDnrPg/viewform" target="_blank" rel="noopener noreferrer" class="text is-semibold is-caption is-txtGrey">
        UserDropdown.feedback
      </a>
    </li>
  </ul> <a href="/logout" class="navbar-dropdown-bottom">
    <div class="arrow"><img src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
    <div class="title is-small is-txtAlert">UserDropdown.logout</div>
  </a>
</div>
`;

exports[`UserDropdown.vue should render dropdown open with notifications badge 1`] = `
<div class="navbar-dropdown">
  <ul class="navbar-dropdown-container">
    <li class="navbar-dropdown-new-platform u-flex u-flex__align--center u-flex__justify--between u-mb--24">
      <div class="navbar-dropdown-userInfo">
        <p class="text is-semibold is-txtPrimary">UserDropdown.carto3.title</p>
        <p class="text is-small u-mt--4">UserDropdown.carto3.message</p>
      </div>
      <div><a href="https://app.carto.com" target="_blank"><img src="../../assets/icons/common/open-in-new.svg"></a></div>
    </li>
    <li class="navbar-dropdown-profile">
      <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
      <div class="navbar-dropdown-userInfo">
        <p class="text is-semibold is-caption">Test user</p>
        <p class="text is-small">user@test.com</p>
      </div>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
    </li>
    <!---->
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
      <router-link to="[object Object]" staticroute="/dashboard/notifications" class="text is-semibold is-caption is-txtGrey">
        UserDropdown.notifications
      </router-link> <span class="notification-number text is-semibold is-small is-txtGrey">2</span>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/feedback.svg"></div> <a href="https://docs.google.com/forms/d/e/1FAIpQLScBQUWd-TP3Qy514DOCNg-KoLrViHijUR5giLAMS-3jmDnrPg/viewform" target="_blank" rel="noopener noreferrer" class="text is-semibold is-caption is-txtGrey">
        UserDropdown.feedback
      </a>
    </li>
  </ul> <a href="/logout" class="navbar-dropdown-bottom">
    <div class="arrow"><img src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
    <div class="title is-small is-txtAlert">UserDropdown.logout</div>
  </a>
</div>
`;

exports[`UserDropdown.vue should render organization link if user is org_admin 1`] = `
<div class="navbar-dropdown is-open">
  <ul class="navbar-dropdown-container">
    <li class="navbar-dropdown-new-platform u-flex u-flex__align--center u-flex__justify--between u-mb--24">
      <div class="navbar-dropdown-userInfo">
        <p class="text is-semibold is-txtPrimary">UserDropdown.carto3.title</p>
        <p class="text is-small u-mt--4">UserDropdown.carto3.message</p>
      </div>
      <div><a href="https://app.carto.com" target="_blank"><img src="../../assets/icons/common/open-in-new.svg"></a></div>
    </li>
    <li class="navbar-dropdown-profile">
      <div class="avatar-container"><img src="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/unversioned/images/avatars/avatar_ghost_yellow.png"></div>
      <div class="navbar-dropdown-userInfo">
        <p class="text is-semibold is-caption">Test user</p>
        <p class="text is-small">user@test.com</p>
      </div>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/settings.svg"></div> <a href="/profile" class="text is-semibold is-caption is-txtGrey">UserDropdown.settings</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/organization.svg"></div> <a href="/organization" class="text is-semibold is-caption is-txtGrey">UserDropdown.organizationSettings</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/api-keys.svg"></div> <a href="/your_apps" class="text is-semibold is-caption is-txtGrey">UserDropdown.apiKeys</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/profile.svg"></div> <a href="/me" target="_blank" class="text is-semibold is-caption is-txtGrey">UserDropdown.publicProfile</a>
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/notifications.svg"></div>
      <router-link to="[object Object]" staticroute="/dashboard/notifications" class="text is-semibold is-caption is-txtGrey">
        UserDropdown.notifications
      </router-link>
      <!---->
    </li>
    <li class="navbar-dropdown-iconLink">
      <div class="icon-container"><img svg-inline="" src="../../assets/icons/navbar/dropdown/feedback.svg"></div> <a href="https://docs.google.com/forms/d/e/1FAIpQLScBQUWd-TP3Qy514DOCNg-KoLrViHijUR5giLAMS-3jmDnrPg/viewform" target="_blank" rel="noopener noreferrer" class="text is-semibold is-caption is-txtGrey">
        UserDropdown.feedback
      </a>
    </li>
  </ul> <a href="/logout" class="navbar-dropdown-bottom">
    <div class="arrow"><img src="../../assets/icons/navbar/dropdown/arrow-right.svg"></div>
    <div class="title is-small is-txtAlert">UserDropdown.logout</div>
  </a>
</div>
`;
